# dfu-util

./: CMakeLists.txt  ChangeLog  Makefile.am  README.md  configure.ac  dfuse-pack.py
.github/workflows/: build.yml
doc/: 40-dfuse.rules  dfu-prefix.1  dfu-prefix.1.md  dfu-suffix.1  dfu-suffix.1.md  dfu-util.1
include/: libdfu-util.h
msvc/getopt/: getopt.c
src/: dfu.c  dfu.h  dfu_file.c  dfu_load.c  dfu_load.h  dfu_util.c  dfuse.c  dfuse.h  dfuse_mem.c  lib.c  lib.h  main.c  portable.h  prefix.c  quirks.c  quirks.h  suffix.c
www/: build.html  dfu-prefix.1.html  dfu-suffix.1.html  dfu-util.1.html  dfuse.html  index.html
